adding DOM, score, and restart

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>rock paper scissors</title>
 </head>
 <body>
+
+    <h1>Rock Paper Scissors</h1>
+
+    <div>
+        <button>✊</button>
+        <button>✋</button>
+        <button>✌</button>
+    </div>
+
+    <div class="score">
+        My Score :
+        <p>0</p>
+    </div>
+    <div class="score">
+        Computer Score :
+        <p>0</p>
+    </div>
+
+    <div class="final-result"></div>
     
     <script src="script.js"></script>
 </body>
