adding style, and fix few code

--- a/index.html
+++ b/index.html
@@ -4,27 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rock paper scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Rock Paper Scissors</h1>
+<center>
+    <div class="container">
+        <h1>rock./paper./scissors</h1>
 
-    <div>
-        <button>✊</button>
-        <button>✋</button>
-        <button>✌</button>
-    </div>
+        <div class="hand-container">
+            <button>✊</button>
+            <button>✋</button>
+            <button>✌</button>
+        </div>
 
-    <div class="score">
-        My Score :
-        <p>0</p>
-    </div>
-    <div class="score">
-        Computer Score :
-        <p>0</p>
-    </div>
+        <div class="score-container">
+            <div class="score">
+                <h4>Player Score</h4>
+                <p>0</p>
+            </div>
+            <div class="score">
+                <h4>Computer Score</h4>
+                <p>0</p>
+            </div>
+        </div>
+ 
 
-    <div class="final-result"></div>
+        <div class="final-result"></div>
+    </div>
+</center>
     
     <script src="script.js"></script>
 </body>
